# nora

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  inspect_memory.py  main.py  nora.yaml  pyproject.toml
agent/: graph.py  router.py  state.py
agent/capabilities/: mcp_bridge.py  registry.py  types.py
agent/capabilities/introspect/: capability.py  tools.py
agent/capabilities/web_search/: capability.py  tools.py
agent/nodes/: classifier.py  compact.py  dispatch.py  executor.py  planner.py  recall.py  reflect.py  responder.py
config/: logging.py  settings.py
logs/: post_tool_use.json  pre_tool_use.json
memory/: schema.py  store.py
utils/: llm.py  openai.py
