[project]
name = "arshi-pa"
version = "0.1.0"
description = "Personal AI Agent Platform"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "langchain>=1.3.9",
    "langgraph>=1.2.5",
    "langchain-openai>=1.0.0",
    "pydantic>=2.13.4",
    "openai>=2.42.0",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "pyright>=1.1.410",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
